# Network-Operating-System-GNS3-benchmark

./: .env  .env.example  .gitignore  Cargo.toml  pyproject.toml
.cargo/: config.toml
experimentation/: network_stacks.toml  operating_systems.toml  routing_stacks.toml  test_batches.toml  topologies.toml
src/: args.rs  main.rs
src/args/: args.rs  generate.rs  mod.rs  plot.rs  run.rs
src/commands/: generate.rs  mod.rs  plot.rs  run.rs
src/models/: experiment.rs  hardware_resources.rs  link.rs  mod.rs  network.rs  network_stack.rs  nic.rs  operating_system.rs  os_command.rs  protocol.rs  routing_stack.rs  test.rs  topology.rs
src/models/gns3/: connector.rs  link.rs  mod.rs  node.rs  project.rs  template.rs
src/models/nodes/: guest.rs  mod.rs  node.rs  router.rs
src/models/routes/: mod.rs  rip_config.rs  rip_route.rs  route.rs  route_config.rs  static_route.rs
src/utils/: env.rs  link.rs  log.rs  mod.rs  monitor.rs  nic.rs  resource_plot.py  route.rs  test.rs  utils.rs
src/utils/files/: dir.rs  experiments.rs  mod.rs  network_stacks.rs  oses.rs  plot_dir.rs  results_dir.rs  routing_stacks.rs  shared_dir.rs  test_batches.rs  topologies.rs
src/utils/gns3/: config.rs  image.rs  mod.rs  node.rs  project.rs  template.rs
src/utils/os_commands/: execute.rs  guest.rs  mod.rs  router.rs  utils.rs
src/utils/os_commands/routing/: mod.rs  rip_config.rs  static_route.rs
